--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && stylelint src/**/*.scss",
+    "lint": "eslint .. --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && stylelint src/**/*.scss",
     "preview": "vite preview",
     "test": "vitest"
   },
