--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,6 +20,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.ts",".eslintrc.cjs", "src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "vite.config.ts",
+    ".eslintrc.cjs",
+    "frontend/src"
+  ],
+  "references": [{ "path": "./tsconfig.node.json"}]
 }
