--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,17 @@ name: Vitest and Lint
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   # VITEST JOB
   test:
     runs-on: ubuntu-latest
+    defaults:
+        run:
+          working-directory: './frontend'
     steps:
       - uses: actions/checkout@v4
       - name: Install Dependencies
@@ -17,7 +20,7 @@ jobs:
       - name: Run Vitest
         run: npm run test
   # ESLINT JOB
-  lint:
+  frontendlint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
