--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -16,15 +16,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install Dependencies
-        run: npm ci
+        run: yarn
       - name: Run Vitest
-        run: npm run test
+        run: yarn test
   # ESLINT JOB
   frontendlint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install Dependencies
-        run: npm ci
+        run: yarn
       - name: Lint
-        run: npm run lint
+        run: yarn lint
