--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "i18next": "^23.12.2",
+    "i18next-http-backend": "^2.5.2",
     "lucide-react": "^0.400.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.0.0",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
