--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -16,9 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install Dependencies
-        run: yarn
+        run: npm
       - name: Run Vitest
-        run: yarn test
+        run: npm run test
   # ESLINT JOB
   lint:
     runs-on: ubuntu-latest
